--- a/style.css
+++ b/style.css
@@ -1,8 +1,27 @@
-span > div {
-    display: inline;
+body {
+    height: 100vh;
+    font-size: 16px;
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.row {
+    display: flex;
 }
 
 .pos-button {
-    width: 2rem;
-    height: 2rem;
+    width: 8rem;
+    height: 8rem;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 8rem;
 }
