--- a/style.css
+++ b/style.css
@@ -7,9 +7,11 @@ body {
 
 .content {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
+    gap: 3rem;
 }
 
 .row {
