--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
     font-size: 16px;
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: slategray;
+    color: white;
 }
 
 .content {
@@ -13,7 +15,9 @@ body {
     height: 100%;
     gap: 2rem;
 }
-.content-hidden {
+
+
+.board-hidden {
     display: none;
 }
 
@@ -21,32 +25,37 @@ body {
     display: flex;
 }
 
+.row > div:hover {
+    background-color: lightslategrey;
+}
+
 .pos-button {
-    width: 8rem;
-    height: 8rem;
-    border: 1px solid black;
+    width: 12rem;
+    height: 12rem;
+    border: 1px solid white;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 8rem;
+    font-size: 12rem;
     
 }
 
 .pos-button-disabled {
-    width: 8rem;
-    height: 8rem;
-    border: 1px solid black;
+    width: 12rem;
+    height: 12rem;
+    border: 1px solid white;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 8rem;
+    font-size: 12rem;
     pointer-events:none;
 }
 
 .scoreboard {
     display: flex;
     gap: 4rem;
-    font-size: 2rem;
+    font-size: 4rem;
+    font-weight: 500;
 }
 .scoreboard > span {
     display: flex;
@@ -60,7 +69,47 @@ body {
 
 .reset-button > button {
     font-size: 2rem;
-    background-color: rgb(26, 115, 232);
+    background-color: rgb(9, 93, 202);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: .5rem 1rem .5rem 1rem;
+}
+
+.reset-button > button:active {
+    font-size: 2rem;
+    background-color: rgb(57, 121, 204);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: .5rem 1rem .5rem 1rem;
+}
+
+.reset-button-hidden {
+    display: none;
+}
+
+.scoreboard-hidden {
+    display: none;
+}
+
+.top-section > input {
+    font-size: 2rem;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: .5rem 1rem .5rem 1rem;
+}
+.top-section > button {
+    font-size: 2rem;
+    background-color: rgb(9, 93, 202);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: .5rem 1rem .5rem 1rem;
+}
+.top-section > button:active {
+    font-size: 2rem;
+    background-color: rgb(57, 121, 204);
     color: white;
     border: none;
     border-radius: 8px;
